--- a/python/tenzir/pyproject.toml
+++ b/python/tenzir/pyproject.toml
@@ -24,14 +24,9 @@ classifiers = [
     "Topic :: System :: Distributed Computing",
 ]
 dependencies = [
+  "numpy>=1.24,<3.0",
+  "python-box>=7.3.2,<8.0.0",
   "tenzir-common>=5.19.0,<5.20.0",
-]
-
-[project.optional-dependencies]
-module = ["numpy>=1.24,<3.0"]
-operator = [
-  "tenzir-operator[pandas]>=5.19.0,<5.20.0",
-  "aiohttp>=3.8,<4.0",
 ]
 
 [project.urls]
