--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,37 @@ if (NOT TENZIR_ENABLE_RELOCATABLE_INSTALLATIONS)
     COMPONENT Development)
 endif ()
 
+# -- allocator -----------------------------------------------------------------
+
+set(TENZIR_ALLOCATOR
+    "mimalloc"
+    CACHE
+      STRING
+      "Configure the allocator.\
+Possible options:\
+  * `none`: Tenzir's custom allocator API is not used. This means using the system allocator for most things and arrow uses its default alloctor\
+  * `mimalloc`: mimalloc is used as an allocator for everything (arrow, operator new, malloc). You can enable stats tracking.\
+  * `system`: the system allocator is ussed for everything (arrow, operator new, malloc). You can enable stats tracking.\
+  * `runtime`: The allocator can be selected via an environment variable at startup. You can enable stats tracking.\
+\
+Environment variables:\
+where `<COMPONENT>` is one of `ARROW`, `CPP` or `C`\
+\
+* `TENZIR_ALLOC_<COMPONENT>=string`: (requires runtime allocator) Selects the allocator for the component. Value must be one of `mimalloc` or `system`\
+* `TENZIR_ALLOC_<COMPONENT>_STATS=true`: (requires allocator not being disabled). Turns on stats counting for the component"
+)
+if (TENZIR_ALLOCATOR STREQUAL "none")
+  set(TENZIR_SELECT_ALLOCATOR "TENZIR_SELECT_ALLOCATOR_NONE")
+elseif (TENZIR_ALLOCATOR STREQUAL "mimalloc")
+  set(TENZIR_SELECT_ALLOCATOR "TENZIR_SELECT_ALLOCATOR_MIMALLOC")
+elseif (TENZIR_ALLOCATOR STREQUAL "system")
+  set(TENZIR_SELECT_ALLOCATOR "TENZIR_SELECT_ALLOCATOR_SYSTEM")
+elseif (TENZIR_ALLOCATOR STREQUAL "runtime")
+  set(TENZIR_SELECT_ALLOCATOR "TENZIR_SELECT_ALLOCATOR_RUNTIME")
+else ()
+  message(ERROR "unknown TENZIR_ALLOCATOR")
+endif ()
+
 # -- internal target -----------------------------------------------------------
 
 # Create the internal target that is used for option/property propagation.
