Add TooManyCooks library and experimental async infrastructure
This commit introduces the TooManyCooks coroutine library as a dependency
and begins experimenting with async operator infrastructure:

- Add TooManyCooks submodule and integrate it into the build system
- Create initial async operator interface with `async_ctx` and
  `async_operator` base classes
- Implement prototype operators (`pass`, `where`) using TMC coroutine tasks
- Refactor queue.cpp with experimental batch sender/receiver using TMC
  channels and synchronization primitives

This is part of the ongoing work to migrate from CAF streaming to a
coroutine-based executor model.

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 [submodule "libtenzir/aux/libcoro"]
 	path = libtenzir/aux/libcoro
 	url = https://github.com/jbaldwin/libcoro
+[submodule "libtenzir/aux/TooManyCooks"]
+	path = libtenzir/aux/TooManyCooks
+	url = https://github.com/tzcnt/TooManyCooks
