Flip pipeline subprocesses option semantics

--- a/tenzir.yaml.example
+++ b/tenzir.yaml.example
@@ -166,8 +166,8 @@ tenzir:
   # Prevent all pipelines from automatically starting when the node starts.
   no-autostart: false
 
-  # Do not move pipeline operators to subprocesses.
-  disable-pipeline-subprocesses: false
+  # Enable subprocess pipelines.
+  pipeline-subprocesses: false
 
   # The size of an index shard, expressed in number of events. This should
   # be a power of 2.
