Move the bundled install tree to "bundled"

--- a/python/tenzir/pyproject.toml
+++ b/python/tenzir/pyproject.toml
@@ -46,11 +46,7 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-"tenzir" = [
-  "bin/**",
-  "libexec/**",
-  "share/**",
-]
+"tenzir" = ["bundled/**"]
 
 [tool.uv.sources]
 tenzir-common = { workspace = true }
