--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ venv/
 # Python build artifacts
 /python/dist
 /python/*/build
+/python/tenzir/src/tenzir/bundled
 
 # VScode built artifacts
 /.vscode/
