Make integration test docker helper easier to use

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,8 +1,8 @@
 # Provides an environment where the python binary and the python bindings
 # are installed and can be run using uv.
 
-ARG TENZIR_VERSION
-ARG TENZIR_CONTAINER_REGISTRY
+ARG TENZIR_VERSION=main
+ARG TENZIR_CONTAINER_REGISTRY=ghcr.io
 
 FROM $TENZIR_CONTAINER_REGISTRY/tenzir/tenzir:$TENZIR_VERSION
 USER root
@@ -21,12 +21,12 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 WORKDIR /tenzir/python/
 # Layer the uv install to optimize the dev experience.
 COPY --chown=tenzir:tenzir \
-    ./python/pyproject.toml \
-    ./python/uv.lock \
+    ./pyproject.toml \
+    ./uv.lock \
     ./
 RUN uv sync --all-packages --all-extras --group dev --no-install-project
 COPY --chown=tenzir:tenzir \
-    ./python/ \
+    ./ \
     ./
 RUN uv sync --all-packages --all-extras --group dev
 ENTRYPOINT [ "uv", "run" ]
