--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -1,4 +1,15 @@
 add_executable(tenzir tenzir.cpp operator_new.cpp malloc.cpp)
+if (TENZIR_ENABLE_STATIC_EXECUTABLE)
+target_link_options(tenzir BEFORE PRIVATE
+  LINKER:--wrap=malloc,
+  --wrap=calloc,
+  --wrap=realloc,
+  --wrap=realloc_array,
+  --wrap=aligned_alloc,
+  --wrap=malloc_usable_size,
+  --wrap=memalign,
+  --wrap=posix_memalign)
+endif ()
 TenzirTargetEnableTooling(tenzir)
 target_link_libraries(tenzir PRIVATE tenzir::internal tenzir::libtenzir)
 TenzirTargetLinkWholeArchive(tenzir PRIVATE tenzir::libtenzir_builtins)
@@ -121,13 +132,14 @@ endif ()
 
 set(TENZIR_PLUGINS
     ${plugins_default}
-    CACHE STRING "Specify a list of plugins to build with Tenzir (supports
+    CACHE STRING "Specify a list of plugin paths to build with Tenzir (supports
     globbing)")
 set(TENZIR_PLUGINS_BLACKLIST
-    ${plugins_default}
+    ""
     CACHE
       STRING
-      "Specify a list of plugins to remove after the globs in TENZIR_PLUGINS are expanded."
+      "Specify a list of plugin names to remove after the globs in TENZIR_PLUGINS
+      are expanded. (does NOT support globbing)"
 )
 cmake_dependent_option(
   TENZIR_ENABLE_STATIC_PLUGINS "Force plugins to be linked statically" OFF
