--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -282,7 +282,8 @@ foreach (dir IN LISTS _integration_test_dirs)
 endforeach ()
 
 add_custom_target(integration-tests DEPENDS tenzir)
-tenzir_build_test_command(_integration_tests_cmd EXTRA_ARGS "--jobs" "4")
+tenzir_build_test_command(_integration_tests_cmd EXTRA_ARGS "--jobs" "4"
+                          "--summary")
 add_custom_command(
   TARGET integration-tests
   POST_BUILD
