--- a/tenzir.yaml.example
+++ b/tenzir.yaml.example
@@ -57,6 +57,19 @@ tenzir:
   #   - /etc/ssl/certs/ca-certificates.crt on Ubuntu
   #cacert:
 
+  # TLS configuration options applied globally to all TLS connections.
+  tls:
+    # Minimum TLS protocol version to accept/use.
+    # Valid values: "1.0", "1.1", "1.2", "1.3"
+    # Recommended: "1.2" or higher for security.
+    #min-version: "1.2"
+
+    # OpenSSL cipher list to use for TLS connections.
+    # This is a colon-separated string of cipher suites.
+    # Example: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256"
+    # See OpenSSL documentation for cipher list format.
+    #ciphers:
+
   # The file system path used for persistent state.
   # Defaults to one of the following paths, selecting the first that is
   # available:
