--- a/tenzir/CMakeLists.txt
+++ b/tenzir/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(tenzir tenzir.cpp operator_new.cpp malloc.cpp)
-if (TENZIR_ENABLE_STATIC_EXECUTABLE)
+if (TENZIR_ENABLE_STATIC_EXECUTABLE AND NOT "${TENZIR_ALLOCATOR}" STREQUAL "none")
   target_link_options(
     tenzir
     BEFORE
@@ -14,6 +14,7 @@ if (TENZIR_ENABLE_STATIC_EXECUTABLE)
     LINKER:--wrap=posix_memalign
     LINKER:--wrap=free)
 endif ()
+
 TenzirTargetEnableTooling(tenzir)
 target_link_libraries(tenzir PRIVATE tenzir::internal tenzir::libtenzir)
 TenzirTargetLinkWholeArchive(tenzir PRIVATE tenzir::libtenzir_builtins)
