--- a/libtenzir/include/tenzir/allocator_config.hpp.in
+++ b/libtenzir/include/tenzir/allocator_config.hpp.in
@@ -1,7 +1,18 @@
 #pragma once
 
+/// CONSTANTS.
 #define TENZIR_SELECT_ALLOCATOR_NONE 0
 #define TENZIR_SELECT_ALLOCATOR_MIMALLOC 1
 #define TENZIR_SELECT_ALLOCATOR_SYSTEM 2
 #define TENZIR_SELECT_ALLOCATOR_RUNTIME 3
+/// The allocator selected by CMake
 #cmakedefine TENZIR_SELECT_ALLOCATOR @TENZIR_SELECT_ALLOCATOR@
+
+/// Whether the allocator may be "mimalloc"
+#define TENZIR_ALLOCATOR_HAS_MIMALLOC                                          \
+  (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_MIMALLOC                 \
+   || TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_RUNTIME)
+/// Whether the allocator may be "system"
+#define TENZIR_ALLOCATOR_HAS_SYSTEM                                            \
+  (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_SYSTEM                   \
+   || TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_RUNTIME)
