--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -90,13 +90,30 @@ jobs:
       - name: Login to AWS ECR
         if: steps.cfg.outputs.needs-ecr
         uses: aws-actions/amazon-ecr-login@v2
+      - name: actions/cache buildah
+        id: buildah-cache
+        if: ${{ ! startsWith(matrix.build.runner, 'ubicloud') }}
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830  # v4
+        with:
+          key: ${{ matrix.build.tag }}-buildah-cache
+          path: /home/runner/work/buildah
+      - name: ubicloud/cache buildah
+        id: ubicloud-buildah-cache
+        if: ${{ startsWith(matrix.build.runner, 'ubicloud') }}
+        uses: ubicloud/cache@92361f338d82d2c58a98875f1b5c95cd14cd6b2a  # v4
+        with:
+          key: ${{ matrix.build.tag }}-buildah-cache
+          path: /home/runner/work/buildah
       - name: Setup go
+        if: steps.buildah-cache.outputs.cache-hit != true && steps.ubicloud-buildah-cache.outputs.cache-hit != true
         uses: actions/setup-go@v5
         with:
           go-version: '>=1.23.0'
       - name: Setup buildah
         run: |
-          ./scripts/debian/install-buildah.sh
+          test -d /home/runner/work/buildah || ./scripts/debian/install-buildah.sh
+          sudo mv buildah-output /home/runner/work/buildah || true
+          sudo cp -r /home/runner/work/buildah/* /usr/local/
           echo "BUILDAH_RUNTIME=/usr/local/bin/crun" >> $GITHUB_ENV
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
       - name: Login to registries
@@ -108,14 +125,14 @@ jobs:
           buildah login docker.io -u "${{ vars.DOCKERHUB_USER }}" -p "$DOCKERHUB_PASSWORD"
       - name: Setup actions/cache
         if: ${{ ! startsWith(matrix.build.runner, 'ubicloud') }}
-        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830  # v4
         with:
           key: ${{ matrix.build.tag }}-build-cache-${{ github.sha }}
           restore-keys: ${{ matrix.build.tag }}-build-cache
           path: /home/runner/work/cache
       - name: Setup ubicloud/cache
         if: ${{ startsWith(matrix.build.runner, 'ubicloud') }}
-        uses: ubicloud/cache@92361f338d82d2c58a98875f1b5c95cd14cd6b2a # v4
+        uses: ubicloud/cache@92361f338d82d2c58a98875f1b5c95cd14cd6b2a  # v4
         with:
           key: ${{ matrix.build.tag }}-build-cache-${{ github.sha }}
           restore-keys: ${{ matrix.build.tag }}-build-cache
