--- a/libtenzir/CMakeLists.txt
+++ b/libtenzir/CMakeLists.txt
@@ -130,6 +130,22 @@ provide_find_module(libmaxminddb)
 find_package(c-ares REQUIRED)
 provide_find_module(c-ares)
 
+# -- jemalloc ------------------------------------------------------------------
+
+set(TENZIR_ALLOCATOR_NEEDS_JEMALLOC OFF)
+if (TENZIR_ALLOCATOR STREQUAL "jemalloc"
+    OR TENZIR_ALLOCATOR STREQUAL "runtime")
+  set(TENZIR_ALLOCATOR_NEEDS_JEMALLOC ON)
+endif ()
+
+if (TENZIR_ALLOCATOR_NEEDS_JEMALLOC)
+  find_package(jemalloc REQUIRED)
+  provide_find_module(jemalloc)
+  string(APPEND TENZIR_FIND_DEPENDENCY_LIST
+         "\nfind_package(jemalloc REQUIRED)")
+  dependency_summary("jemalloc" jemalloc::jemalloc_ "Dependencies")
+endif ()
+
 # -- mimalloc ------------------------------------------------------------------
 
 set(TENZIR_ALLOCATOR_NEEDS_MIMALLOC OFF)
@@ -277,6 +293,11 @@ endif ()
 target_link_libraries(libtenzir_builtins PRIVATE c-ares::cares)
 string(APPEND TENZIR_FIND_DEPENDENCY_LIST "\nfind_package(c-ares REQUIRED)")
 dependency_summary("c-ares" c-ares::cares "Dependencies")
+
+# Link against jemalloc.
+if (TENZIR_ALLOCATOR_NEEDS_JEMALLOC)
+  target_link_libraries(libtenzir PUBLIC jemalloc::jemalloc_)
+endif ()
 
 # Link against mimalloc.
 if (TENZIR_ALLOCATOR_NEEDS_MIMALLOC)
