--- a/libtenzir/include/tenzir/allocator_config.hpp.in
+++ b/libtenzir/include/tenzir/allocator_config.hpp.in
@@ -2,12 +2,17 @@
 
 /// CONSTANTS.
 #define TENZIR_SELECT_ALLOCATOR_NONE 0
-#define TENZIR_SELECT_ALLOCATOR_MIMALLOC 1
-#define TENZIR_SELECT_ALLOCATOR_SYSTEM 2
-#define TENZIR_SELECT_ALLOCATOR_RUNTIME 3
+#define TENZIR_SELECT_ALLOCATOR_SYSTEM 1
+#define TENZIR_SELECT_ALLOCATOR_JEMALLOC 2
+#define TENZIR_SELECT_ALLOCATOR_MIMALLOC 3
+#define TENZIR_SELECT_ALLOCATOR_RUNTIME 0XFF
 /// The allocator selected by CMake
 #cmakedefine TENZIR_SELECT_ALLOCATOR @TENZIR_SELECT_ALLOCATOR@
 
+/// Whether the allocator may be "jemalloc"
+#define TENZIR_ALLOCATOR_HAS_JEMALLOC                                          \
+  (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_JEMALLOC                 \
+   || TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_RUNTIME)
 /// Whether the allocator may be "mimalloc"
 #define TENZIR_ALLOCATOR_HAS_MIMALLOC                                          \
   (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_MIMALLOC                 \
@@ -18,4 +23,6 @@
    || TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_RUNTIME)
 /// Whether we might use the system allocator (wrapped or not).
 #define TENZIR_ALLOCATOR_MAY_USE_SYSTEM                                        \
-  (TENZIR_SELECT_ALLOCATOR != TENZIR_SELECT_ALLOCATOR_MIMALLOC)
+  (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_NONE)                    \
+    || (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_RUNTIME)            \
+    || (TENZIR_SELECT_ALLOCATOR == TENZIR_SELECT_ALLOCATOR_SYSTEM)
