--- a/python/tenzir-common/pyproject.toml
+++ b/python/tenzir-common/pyproject.toml
@@ -19,8 +19,6 @@ classifiers = [
 ]
 dependencies = [
   "pyarrow>=11",
-  "dynaconf>=3.2,<4.0",
+  "dynaconf>=3.2",
+  "pandas>=2.1.3",
 ]
-
-[project.optional-dependencies]
-pandas = ["pandas>=2.1.3,<3.0"]
