cherry-pick 612248d888a2e664bedd4eb99d844297a3f26c12

--- a/.github/workflows/tenzir.yaml
+++ b/.github/workflows/tenzir.yaml
@@ -81,6 +81,7 @@ jobs:
         with:
           fetch-depth: 2
       - name: Fetch to merge-base
+        if: github.event_name == 'pull_request'
         run: |
           git fetch origin main
           git fetch origin $(git merge-base "origin/$GITHUB_BASE_REF" HEAD)
@@ -119,11 +120,6 @@ jobs:
           id_sha="${{ github.sha }}"
           release_version="${version}"
           build_version="${version}+g${id_sha:0:10}"
-          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
-            before_sha="${{ github.event.before }}"
-          else
-            before_sha="$(git merge-base "origin/$GITHUB_BASE_REF" HEAD)"
-          fi
           echo "build-version=${build_version}" >> $GITHUB_OUTPUT
           echo "release-version=${release_version}" >> $GITHUB_OUTPUT
           # Inject the branch slugs for cache names.
