Update CMakelists to specifically link boost.process

--- a/libtenzir/CMakeLists.txt
+++ b/libtenzir/CMakeLists.txt
@@ -109,7 +109,7 @@ endif ()
 
 # -- boost ---------------------------------------------------------------------
 
-find_package(Boost REQUIRED COMPONENTS headers filesystem url)
+find_package(Boost REQUIRED COMPONENTS headers filesystem url process)
 
 # -- re2 -----------------------------------------------------------------------
 
@@ -439,9 +439,9 @@ dependency_summary("Apache Arrow" ${ARROW_LIBRARY} "Dependencies")
 
 # Link against Boost.
 target_link_libraries(libtenzir PUBLIC Boost::headers Boost::filesystem
-                                       Boost::url)
+                                       Boost::url Boost::process)
 string(APPEND TENZIR_FIND_DEPENDENCY_LIST
-       "\nfind_package(Boost REQUIRED COMPONENTS headers filesystem url)")
+       "\nfind_package(Boost REQUIRED COMPONENTS headers filesystem url process)")
 dependency_summary("Boost" Boost::headers "Dependencies")
 
 # Link against re2.
